# feedtui

./: Cargo.toml  LICENSE  Makefile  PYTHON_RELEASE.md  README.md  config.example.toml  flake.nix  install.sh  pyproject.toml
.github/workflows/: pypi-release.yml  python-wheels.yml
python/feedtui/: __init__.py
src/: app.rs  config.rs  event.rs  lib.rs  main.rs
src/feeds/: hackernews.rs  mod.rs  rss.rs  sports.rs  stocks.rs  youtube.rs
src/ui/: article_reader.rs  creature_menu.rs
src/ui/widgets/: hackernews.rs  mod.rs  rss.rs  sports.rs  stocks.rs  youtube.rs
