[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "feedtui"
version = "0.1.1"
description = "A configurable terminal dashboard for stocks, news, sports, and social feeds with a virtual pet companion"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "malchal" }
]
keywords = ["tui", "dashboard", "terminal", "rss", "stocks", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/muk2/feedtui"
Repository = "https://github.com/muk2/feedtui"
Issues = "https://github.com/muk2/feedtui/issues"

[project.scripts]
feedtui = "feedtui:_cli_main"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "feedtui"
